<resources>
    <string name="app_name">MoodTracker</string>

    <string name="description_btn_welcome">"Bouton page d'accueil"</string>
    <string name="description_smiley_welcome">"Smiley page d'accueil"</string>
    <string name="description_bottom_welcome">"Zone boutons page d'accueil"</string>

    <string name="dismiss_alertbtn">Annuler</string>
    <string name="validate_alertbtn">Valider</string>
    <string name="sms_alertbtn">Partager</string>
    <string name="frg_commentary_hint">commentaire</string>

    <string name="d7_btn">Il y a une semaine</string>
    <string name="d6_btn">Il y a 6 jours</string>
    <string name="d5_btn">Il y a 5 jours</string>
    <string name="d4_btn">Il y a 4 jours</string>
    <string name="d3_btn">Il y a 3 jours</string>
    <string name="d2_btn">Avant-hier</string>
    <string name="d1_btn">Hier</string>
    <string name="description_btn">Bouton_note</string>

    <string name="welcome_sms">Pour toi à qui je dis tout:</string>
    <string name="message_sms">Message</string>
    <string name="text_btn">"C'est parti!"</string>
    <string name="permission_request">On a la permission?</string>
    <string name="permission_title">On y va?</string>
    <string name="permission_message">"Pour pouvoir envoyer un SMS, nous avons besoin de votre permission :-)"</string>
    <string name="permission_ok_btn">Allez-y!</string>
    <string name="permission_no_btn">Non, non</string>
    <string name="permission_ok_toast">Permission accordée!</string>
    <string name="permission_no_toast">Permission refusée</string>
    <string name="permission_wrong">"Oups, ce numéro n'a pas le bon nombre de chiffres"</string>
    <string name="hint_tel">numéro de téléphone</string>

    <string name="sms_1">"carrément mauvaise"</string>
    <string name="sms_2">"pas franchement bonne"</string>
    <string name="sms_3">"ni bonne, ni mauvaise"</string>
    <string name="sms_4">"bonne"</string>
    <string name="sms_5">"super bonne"</string>
    <string name="sms_text1">"Je te partage mon humeur du moment. Elle est"</string>

    <string name="pie_title">Petit résumé de la semaine</string>
    <string name="pie_1">"--"</string>
    <string name="pie_2">"-"</string>
    <string name="pie_3">"="</string>
    <string name="pie_4">"+"</string>
    <string name="pie_5">"++"</string>

</resources>
