<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="50dp">


    <TextView
        android:id="@+id/fragment_sms_phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/welcome_sms" />

    <EditText
        android:id="@+id/frg_sms_phonenumer_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/hint_tel"
        tools:textSize="24sp" />

    <EditText
        android:id="@+id/frg_sms_message_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        tools:hint="message"
        android:text="@string/message_sms"
        tools:lines="3" />

</LinearLayout>